--- a/app/src/main/res/navigation/auth_nav_graph.xml
+++ b/app/src/main/res/navigation/auth_nav_graph.xml
@@ -8,26 +8,26 @@
         android:name="com.app.presentation.authentication.ui.login.AuthHomeFragment"
         android:label="AuthHomeFragment" >
         <action
-            android:id="@+id/action_authHomeFragment_to_loginFragment2"
-            app:destination="@id/loginFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/loginFragment"
-        android:name="com.app.presentation.authentication.ui.login.LoginFragment"
-        android:label="LoginFragment" >
-        <action
-            android:id="@+id/action_loginFragment_to_registerFragment2"
+            android:id="@+id/action_authHomeFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
         <action
-            android:id="@+id/action_loginFragment_to_authHomeFragment2"
-            app:destination="@id/authHomeFragment" />
+            android:id="@+id/action_authHomeFragment_to_forgotPasswordFragment"
+            app:destination="@id/forgotPasswordFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.app.presentation.authentication.ui.login.RegisterFragment"
         android:label="RegisterFragment" >
         <action
-            android:id="@+id/action_registerFragment_to_loginFragment2"
-            app:destination="@id/loginFragment" />
+            android:id="@+id/action_registerFragment_to_authHomeFragment"
+            app:destination="@id/authHomeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/forgotPasswordFragment"
+        android:name="com.app.presentation.authentication.ui.login.ForgotPasswordFragment"
+        android:label="ForgotPasswordFragment" >
+        <action
+            android:id="@+id/action_forgotPasswordFragment_to_authHomeFragment"
+            app:destination="@id/authHomeFragment" />
     </fragment>
 </navigation>
