--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -5,7 +5,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.app.presentation.main.ui.HomeFragment"
+        android:name="com.app.framework.presentation.main.ui.HomeFragment"
         android:label="HomeFragment" >
         <action
             android:id="@+id/action_homeFragment_to_allInvoiceListHistoryFragment"
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/allInvoiceListHistoryFragment"
-        android:name="com.app.presentation.main.ui.AllInvoiceListHistoryFragment"
+        android:name="com.app.framework.presentation.main.ui.AllInvoiceListHistoryFragment"
         android:label="AllInvoiceListHistoryFragment" >
         <action
             android:id="@+id/action_allInvoiceListHistoryFragment_to_addInvoiceFragment"
@@ -24,7 +24,7 @@
     </fragment>
     <fragment
         android:id="@+id/allClientListFragment"
-        android:name="com.app.presentation.main.ui.AllClientListFragment"
+        android:name="com.app.framework.presentation.main.ui.AllClientListFragment"
         android:label="AllClientListFragment" >
         <action
             android:id="@+id/action_allClientListFragment_to_addClientFragment"
@@ -35,7 +35,7 @@
     </fragment>
     <fragment
         android:id="@+id/addClientFragment"
-        android:name="com.app.presentation.main.ui.AddClientFragment"
+        android:name="com.app.framework.presentation.main.ui.AddClientFragment"
         android:label="AddClientFragment" >
         <action
             android:id="@+id/action_addClientFragment_to_allClientListFragment"
@@ -43,7 +43,7 @@
     </fragment>
     <fragment
         android:id="@+id/addInvoiceFragment"
-        android:name="com.app.presentation.main.ui.AddInvoiceFragment"
+        android:name="com.app.framework.presentation.main.ui.AddInvoiceFragment"
         android:label="AddInvoiceFragment" >
         <action
             android:id="@+id/action_addInvoiceFragment_to_invoiceDetailFragment"
@@ -51,7 +51,7 @@
     </fragment>
     <fragment
         android:id="@+id/clientInvoiceListFragment"
-        android:name="com.app.presentation.main.ui.ClientInvoiceListFragment"
+        android:name="com.app.framework.presentation.main.ui.ClientInvoiceListFragment"
         android:label="ClientInvoiceListFragment" >
         <action
             android:id="@+id/action_clientInvoiceListFragment_to_addInvoiceFragment"
@@ -59,7 +59,7 @@
     </fragment>
     <fragment
         android:id="@+id/invoiceDetailFragment"
-        android:name="com.app.presentation.main.ui.InvoiceDetailFragment"
+        android:name="com.app.framework.presentation.main.ui.InvoiceDetailFragment"
         android:label="InvoiceDetailFragment" >
         <action
             android:id="@+id/action_invoiceDetailFragment_to_clientInvoiceListFragment"
